quick wrap fixes, and padding.
Up next: COLORS!

--- a/New_Project/public/bootstrap/css/bootstrap.css
+++ b/New_Project/public/bootstrap/css/bootstrap.css
@@ -6,7 +6,25 @@ position: fixed;
 
 .inputchat {
 top: 90%;
+padding-left: 25%;
+padding-right: 25%;
 position: fixed;
+}
+
+.list-group {
+  padding-left: 2%;
+  padding-right: 2%;
+  margin-bottom: 20px;
+}
+
+.list-group-item {
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  word-wrap: break-word;
 }
 
 .status {
@@ -4939,18 +4957,8 @@ a.thumbnail.active {
   padding-left: 0;
   list-style: none;
 }
-.list-group {
-  padding-left: 0;
-  margin-bottom: 20px;
-}
-.list-group-item {
-  position: relative;
-  display: block;
-  padding: 10px 15px;
-  margin-bottom: -1px;
-  background-color: #fff;
-  border: 1px solid #ddd;
-}
+
+
 .list-group-item:first-child {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
